--- a/addons/fy_lessonv2/template/mobile/_headerv2.html
+++ b/addons/fy_lessonv2/template/mobile/_headerv2.html
@@ -28,6 +28,7 @@
 		<link rel="stylesheet" href="{MODULE_URL}template/mobile/style/cssv2/weui.min.css?v={$versions}" />
 		<link rel="stylesheet" href="{MODULE_URL}template/mobile/style/cssv2/fonts/font-awesome.min.css?v={$versions}"/>
 		<link rel="stylesheet" href="{MODULE_URL}template/mobile/style/cssv2/index.css?v={$versions}"/>
+		<link rel="stylesheet" href="{MODULE_URL}template/mobile/style/cssv2/bottom.css?v={$versions}"/>
 	</head>
 	<body>
 		<div class="tabbar tabbar_wrap page_wrap">
