--- a/addons/fy_lessonv2/template/mobile/style/cssv2/new_self.css
+++ b/addons/fy_lessonv2/template/mobile/style/cssv2/new_self.css
@@ -1,11 +1,11 @@
 @media screen and (max-width:414px) {
 	html {
-		font-size: 100px
+		/*font-size: 100px*/
 	}
 }
 @media screen and (min-width:520px) {
 	html {
-		font-size: 126px
+		/*font-size: 126px*/
 	}
 }
 @keyframes wave-animation-1 {
