--- a/addons/fy_lessonv2/template/mobile/_footerv2.html
+++ b/addons/fy_lessonv2/template/mobile/_footerv2.html
@@ -1,73 +1,49 @@
 		<!-- 底部导航 -->
-		<div class="weui_tabbar {if ($_GPC['do']=='lesson' && $section['sectiontype']!=2) || $_GPC['do']=='confirm'}hidden{/if}">
-
-			<a href="{php echo $config['indexs_link'] ? $config['indexs_link'] : $this->createMobileUrl('index');}&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='index'}weui_bar_item_on{/if}">
-				<div class="weui_tabbar_icon">
-					<i class="fa fa-{php echo $config['indexs_icon'] ? $config['indexs_icon'] : 'home';} menu_on" style="font-size: 24px;"></i>
-				</div>
-				<p class="weui_tabbar_label">{php echo $config['indexs_name'] ? $config['indexs_name'] : '首 页';}</p>
+		<div class="nav-content {if ($_GPC['do']=='lesson' && $section['sectiontype']!=2) || $_GPC['do']=='confirm'}hidden{/if}">
+			{if $_GPC['do']=='index'}
+			<a class="label-box tab-color" href="{php echo $config['indexs_link'] ? $config['indexs_link'] : $this->createMobileUrl('index');}&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/home-high.png">
+				<span>{php echo $config['indexs_name'] ? $config['indexs_name'] : '首 页';}</span>
 			</a>
-
-			<a href="{php echo $config['searchs_link'] ? $config['searchs_link'] : $this->createMobileUrl('search');}&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='search'}weui_bar_item_on{/if}">
-				<div class="weui_tabbar_icon">
-					<i class="fa fa-{php echo $config['searchs_icon'] ? $config['searchs_icon'] : 'video-camera';}"></i>
-				</div>
-				<p class="weui_tabbar_label">{php echo $config['searchs_name'] ? $config['searchs_name'] : '全部课程';}</p>
-			</a>
-
-			{if $config['diynav_name'] && $config['diynav_link']}
-				<a href="{$config['diynav_link']}" class="weui_tabbar_item">
-					<div class="weui_tabbar_icon">
-						<i class="fa fa-{$config['diynav_icon']}"></i>
-					</div>
-					<p class="weui_tabbar_label">{$config['diynav_name']}</p>
-				</a>
 			{else}
-				{if $setting['teacherlist']==1}
-				<a href="{php echo $this->createMobileUrl('teacherlist');}&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='teacherlist'}weui_bar_item_on{/if}">
-					<div class="weui_tabbar_icon">
-						<i class="fa fa-list-ul"></i>
-					</div>
-					<p class="weui_tabbar_label">讲师列表</p>
-				</a>
-				{elseif $setting['teacherlist']==2}
-				<a href="{php echo $this->createMobileUrl('vip');}&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='vip'}weui_bar_item_on{/if}">
-					<div class="weui_tabbar_icon">
-						<i class="fa fa-diamond"></i>
-					</div>
-					<p class="weui_tabbar_label">VIP会员</p>
-				</a>
-				{elseif $setting['teacherlist']==3}
-				<a href="{php echo $this->createMobileUrl('getcoupon');}&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='getcoupon'}weui_bar_item_on{/if}">
-					<div class="weui_tabbar_icon">
-						<i class="fa fa-gift"></i>
-					</div>
-					<p class="weui_tabbar_label">优惠券</p>
-				</a>
-				{/if}
+			<a class="label-box" href="{php echo $config['indexs_link'] ? $config['indexs_link'] : $this->createMobileUrl('index');}&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/home.png">
+				<span>{php echo $config['indexs_name'] ? $config['indexs_name'] : '首 页';}</span>
+			</a>
 			{/if}
-
-			<a href="{php echo $config['lessons_link'] ? $config['lessons_link'] : $this->createMobileUrl('mylearning');}&status=&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='mylearning'}weui_bar_item_on{/if}">
-				<div class="weui_tabbar_icon">
-					<i class="fa fa-{php echo $config['lessons_icon'] ? $config['lessons_icon'] : 'book';}"></i>
-				</div>
-				<p class="weui_tabbar_label">{php echo $config['lessons_name'] ? $config['lessons_name'] : '我的学习';}</p>
+			{if $_GPC['do']=='search'}
+			<a class="label-box tab-color" href="{php echo $config['searchs_link'] ? $config['searchs_link'] : $this->createMobileUrl('search');}&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/all-program-high.png">
+				<span>{php echo $config['searchs_name'] ? $config['searchs_name'] : '全部课程';}</span>
 			</a>
-			<!--
-			<a href="{php echo $config['lessons_link'] ? $config['lessons_link'] : $this->createMobileUrl('mylesson');}&status=&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='mylesson'}weui_bar_item_on{/if}">
-				<div class="weui_tabbar_icon">
-					<i class="fa fa-{php echo $config['lessons_icon'] ? $config['lessons_icon'] : 'book';}"></i>
-				</div>
-				<p class="weui_tabbar_label">{php echo $config['lessons_name'] ? $config['lessons_name'] : '我的课程';}</p>
+			{else}
+			<a class="label-box" href="{php echo $config['searchs_link'] ? $config['searchs_link'] : $this->createMobileUrl('search');}&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/all-program.png">
+				<span>{php echo $config['searchs_name'] ? $config['searchs_name'] : '全部课程';}</span>
 			</a>
-			-->
-
-			<a href="{php echo $config['selfs_link'] ? $config['selfs_link'] : $this->createMobileUrl('self');}&t={$t}" class="weui_tabbar_item {if $_GPC['do']=='self'}weui_bar_item_on{/if}">
-				<div class="weui_tabbar_icon">
-					<i class="fa fa-{php echo $config['selfs_icon'] ? $config['selfs_icon'] : 'user';}"></i>
-				</div>
-				<p class="weui_tabbar_label">{php echo $config['selfs_name'] ? $config['selfs_name'] : '个人中心';}</p>
+			{/if}
+			{if $_GPC['do']=='mylearning'}
+			<a class="label-box tab-color" href="{php echo $config['lessons_link'] ? $config['lessons_link'] : $this->createMobileUrl('mylearning');}&status=&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/my-study-high.png">
+				<span>{php echo $config['lessons_name'] ? $config['lessons_name'] : '我的学习';}</span>
 			</a>
+			{else}
+			<a class="label-box" href="{php echo $config['lessons_link'] ? $config['lessons_link'] : $this->createMobileUrl('mylearning');}&status=&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/my-study.png">
+				<span>{php echo $config['lessons_name'] ? $config['lessons_name'] : '我的学习';}</span>
+			</a>
+			{/if}
+			{if $_GPC['do']=='self'}
+			<a class="label-box tab-color" href="{php echo $config['selfs_link'] ? $config['selfs_link'] : $this->createMobileUrl('self');}&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/my-set-high.png">
+				<span>{php echo $config['selfs_name'] ? $config['selfs_name'] : '个人中心';}</span>
+			</a>
+			{else}
+			<a class="label-box" href="{php echo $config['selfs_link'] ? $config['selfs_link'] : $this->createMobileUrl('self');}&t={$t}">
+				<img src="{MODULE_URL}template/mobile/images/my-set.png">
+				<span>{php echo $config['selfs_name'] ? $config['selfs_name'] : '个人中心';}</span>
+			</a>
+			{/if}
 		</div>
 		<!-- /底部导航 -->
 	</div>
