--- a/addons/fy_lessonv2/template/mobile/index.html
+++ b/addons/fy_lessonv2/template/mobile/index.html
@@ -8,9 +8,6 @@
  * 追究法律责任的权力和最终解释权。
 -->
 {template '_headerv2'}
-<style>
-.weui_tab_bd{height: auto; padding-bottom: 0;}
-</style>
 <script src="{MODULE_URL}template/mobile/style/jsv2/BreakingNews.js?v={$versions}"></script>
 <link href="{MODULE_URL}template/mobile/style/cssv2/imooc-home.css?v={$versions}" rel="stylesheet" />
 <script type="text/javascript">
@@ -41,40 +38,28 @@ $(function() {
 <div style='height:44px;'>&nbsp;</div>
 {/if}
 
-<div class="weui_tab_bd" id="weui_tab_div">
-	<!--搜索框  -->
-	<div class="header">
-		<!-- <div class="header-box">
-            <span class="title">一站博物</span>
-        </div> -->
-		<div class="search-box">
-			<div class='search-placeholder'>
-				<input type="text" id="searchInput" class="search_input z-abled" value="" autocorrect="off" placeholder="输入课程名称进行查找">
-			</div>
-			<!-- <input wx:if="{{condition}}"> -->
+
+<div class="container">
+	<div class="search-box">
+		<div class='search-placeholder'>
+			<input type="text" id="searchInput" class="search_input z-abled" style="border:none;" value="" autocorrect="off" placeholder="输入课程名称进行查找">
 		</div>
 	</div>
 
-	<!-- 广告轮播图 -->
 	{if !empty($banner)}
 	<div class="swiper-box">
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
 				{loop $banner $item}
 				<div class="swiper-slide">
-					<a href="{$item['link']}">
-						<img class="swiper-lazy" src="{$_W['attachurl']}{$item['picture']}">
-					</a>
+					<a href="{$item['link']}"><img class="slide-image" src="{$_W['attachurl']}{$item['picture']}" alt=""></a>
 				</div>
 				{/loop}
 			</div>
-			<div class="swiper-pagination"></div>
 		</div>
 	</div>
 	{/if}
-	<!-- /广告轮播图 -->
 
-	<!-- 分类 -->
 	<div class="convenient-btn">
 		<a class="convenient-href" href="{php echo $this->createMobileUrl('science');}">
 			<label class="label-box">
@@ -101,260 +86,127 @@ $(function() {
 			</label>
 		</a>
 	</div>
-	<!-- /分类 -->
-	
+
 	<!-- 公告 -->
 	{if !empty($articlelist) && is_array($articlelist)}
-	<div class="BreakingNewsController easing" id="breakingnews">
-		<div class="bn-title" onclick="location.href='{php echo $this->createMobileUrl('article', array('op'=>'list'));}'"></div>
-		<ul>
-			{loop $articlelist $article}
-			<li><a href="{php echo $this->createMobileUrl('article', array('op'=>'display','aid'=>$article['id']));}">[{php echo date('m-d',$article['addtime']);}]{$article['title']}</a></li>
-			{/loop}
-		</ul>
-		<div class="bn-arrows" onclick="location.href='{php echo $this->createMobileUrl('article', array('op'=>'list'));}'">更多</div>	
-	</div>
-	{/if}
-	<!-- /公告 -->
-
-	<!-- 限时折扣 -->
-	{if !empty($discount_banner)}
-	<div class="swiper-container" style="margin-top:10px;height:100px;">
-		<div class="swiper-wrapper">
-			<!--图片一-->
-			{loop $discount_banner $item}
-			<div class="swiper-slide">
-				<a href="{$item['link']}">
-					<img class="swiper-lazy" src="{$_W['attachurl']}{$item['picture']}">
-				</a>
-			</div>
-			{/loop}
-			<!--图片一end-->
+	<div class="notice-line">
+		<div class="icon-box">
+			<img class="notice-img" src="{MODULE_URL}template/mobile/images/notice.png">
 		</div>
-		<div class="swiper-pagination"></div>
+		<div class="notice-swiper">
+			<div class="swiper-container1">
+				<div class="swiper-wrapper">
+					{loop $articlelist $article}
+					<div class="swiper-slide"><a href="{php echo $this->createMobileUrl('article', array('op'=>'display','aid'=>$article['id']));}">[{php echo date('m-d',$article['addtime']);}]{$article['title']}</a></div>
+					{/loop}
+				</div>
+			</div>
+		</div>
+		<div class="more-btn" onclick="location.href='{php echo $this->createMobileUrl('article', array('op'=>'list'));}'">更多
+			<img class="box-img" src="{MODULE_URL}template/mobile/images/right-arrow.png">
+		</div>
 	</div>
 	{/if}
-	<!-- /限时折扣 -->
-	
+
 	<!-- 最新课程 -->
 	{if $setting['show_newlesson'] && $newlesson}
-	<div class="classification-list">
+	<div class="classification-list" style="margin-top: 1.125rem;">
 		<div class="box-title">
-			<span class="box-top">最新推荐</span>
+			<span class="box-top"><img class="left-img" src="{MODULE_URL}template/mobile/images/latest-recommendation.png" alt=""> 最新推荐<img class="right-img" src="{MODULE_URL}template/mobile/images/star.png" alt=""></span>
 			<a href="{php echo $this->createMobileUrl('search', array('ico' => 'new'))}">
-			<div class="more-btn">更多
-				<i class="fa fa-angle-double-right"></i>
-				<!--<img class="box-img" src="{MODULE_URL}template/mobile/images/right-arrow.png">-->
-			</div>
+				<div class="more-btn">更多
+					<img class="box-img" src="{MODULE_URL}template/mobile/images/right-arrow.png">
+				</div>
 			</a>
 		</div>
 		<!--课程列表  -->
 		<div class="list-box">
 			{loop $newlesson $item}
-			<div class="box-one" onclick="location.href='{php echo $this->createMobileUrl('lesson', array('id'=>$item['id']));}'">
-				<img class="box-left" src="{$_W['attachurl']}{$item['images']}">
-				<div class="box-right">
-					<span class="top-span">{$item['bookname']}</span>
-					<span class="middle-span">{$item['difficulty']}    {if $item['price']>0}{php echo $item['buynum']+$item['virtual_buynum'];}{else}{php echo $item['buynum']+$item['virtual_buynum']+$item['visit_number'];}{/if}人已学习</span>
-					<span class="bottom-span">{php echo $item['price']>0?'¥'.$item['price']:'免费';}</span>
+			<a href="{php echo $this->createMobileUrl('lesson', array('id'=>$item['id']));}">
+				<div class="box-one">
+					<img class="box-left" src="{$_W['attachurl']}{$item['images']}">
+					<div class="box-right">
+						<span class="top-span">{$item['bookname']}</span>
+						<label class="middle-label">{$item['difficulty']}</label>
+						<span class="bottom-span">{php echo $item['price']>0?'¥'.$item['price']:'免费';} <span class="already-study"><img src="{MODULE_URL}template/mobile/images/person-study.png" alt="">{if $item['price']>0}{php echo $item['buynum']+$item['virtual_buynum'];}{else}{php echo $item['buynum']+$item['virtual_buynum']+$item['visit_number'];}{/if}人已学习</span></span>
+					</div>
 				</div>
-			</div>
+			</a>
 			{/loop}
 		</div>
 	</div>
 	{/if}
-	<!-- /最新课程 -->
 
 	<!-- 热门好课 -->
 	{if !empty($hotlesson)}
 	<div class="classification-list">
 		<div class="box-title">
-			<span class="box-top">热门好课</span>
+			<span class="box-top"><img class="left-img" src="{MODULE_URL}template/mobile/images/ropular-lessons.png" alt="">热门好课<img class="right-img" src="{MODULE_URL}template/mobile/images/star.png" alt=""></span>
 			<a href="{php echo $this->createMobileUrl('search', array('ico' => 'hot'))}">
-			<div class="more-btn">更多
-				<i class="fa fa-angle-double-right"></i>
-				<!--<img class="box-img" src="{MODULE_URL}template/mobile/images/right-arrow.png">-->
-			</div>
+				<div class="more-btn">更多
+					<img class="box-img" src="{MODULE_URL}template/mobile/images/right-arrow.png">
+				</div>
 			</a>
 		</div>
-		<!--类别窗口  -->
-		{if count($category_list) > 0}
-		<div class="classification-box">
-			{loop $category_list $key $item}
-			<div class="classification-one  {if $key % 2 == 0}frist-bg{else}second-bg{/if}" onclick="location.href='{php echo $this->createMobileUrl('lesson', array('cat_id'=>$item['id']));}'">
-				<span class="box-top">{$item['name']}</span>
-				<span class="box-middle"></span>
-				<span class="box-bottom"></span>
-			</div>
-			{/loop}
-		</div>
-		{/if}
 		<!--课程列表  -->
 		<div class="list-box">
 			{loop $hotlesson $item}
-			<div class="box-one" onclick="location.href='{php echo $this->createMobileUrl('lesson', array('id'=>$item['id']));}'">
-				<img class="box-left" src="{$_W['attachurl']}{$item['images']}">
-				<div class="box-right">
-					<span class="top-span">{$item['bookname']}</span>
-					<span class="middle-span">{$item['difficulty']}    {if $item['price']>0}{php echo $item['buynum']+$item['virtual_buynum'];}{else}{php echo $item['buynum']+$item['virtual_buynum']+$item['visit_number'];}{/if}人已学习</span>
-					<span class="bottom-span">{php echo $item['price']>0?'¥'.$item['price']:'免费';}</span>
+			<a href="{php echo $this->createMobileUrl('lesson', array('id'=>$item['id']));}">
+				<div class="box-one">
+					<img class="box-left" src="{$_W['attachurl']}{$item['images']}">
+					<div class="box-right">
+						<span class="top-span">{$item['bookname']}</span>
+						{if !empty($item['difficulty'])}
+						<label class="middle-label">{$item['difficulty']}</label>
+						{/if}
+						<span class="bottom-span">{php echo $item['price']>0?'¥'.$item['price']:'免费';} <span class="already-study"><img src="{MODULE_URL}template/mobile/images/person-study.png" alt="">{if $item['price']>0}{php echo $item['buynum']+$item['virtual_buynum'];}{else}{php echo $item['buynum']+$item['virtual_buynum']+$item['visit_number'];}{/if}人已学习</span></span>
+					</div>
 				</div>
-			</div>
+			</a>
 			{/loop}
 		</div>
 	</div>
 	{/if}
-	<!-- /热门好课 -->
 
-	<!-- 同时购S -->
+	<!--一起买更划算  -->
 	{if !empty($meanwhile_banner)}
 	<div class="classification-list distance-bottom">
 		<div class="box-title">
-			<span class="box-top">一起买更划算</span>
+			<span class="box-top"><img class="left-img" src="{MODULE_URL}template/mobile/images/shopping-cart.png" alt="">一起买更划算<img class="right-img" src="{MODULE_URL}template/mobile/images/star.png" alt=""></span>
+			<a href="{php echo $this->createMobileUrl('meanwhile', array('op' => 'list'))}">
+				<div class="more-btn">更多
+					<img class="box-img" src="{MODULE_URL}template/mobile/images/right-arrow.png">
+				</div>
+			</a>
 		</div>
 		<!--购买列表  -->
 		{loop $meanwhile_banner $meanwhile}
-		<div class="classification-box">
-			{loop $meanwhile['list'] $key $lesson}
-			<div class="classification-one  {if $key % 2 == 0}frist-bg{else}second-bg{/if}">
-				<span class="box-top">{$lesson['name']}</span>
-				<span class="box-middle">{$lesson['bookname']}</span>
-				<span class="box-bottom">¥{if $lesson['spec_id']}{$lesson['spec_price']}{else}{$lesson['price']}{/if}</span>
+		<div class="one-box">
+			<a href="{if empty($meanwhile['buystatus'])}{php echo $this->createMobileUrl('meanwhiledetail', array('id' => $meanwhile['meanwhile']['id']));}{/if}">
+				<img class="classification-img" src="{$_W['attachurl']}{$meanwhile['meanwhile']['thumb']}" alt="">
+			</a>
+			<div class="sale-line">
+				<div class="line-left">
+					<span class="now-price">¥{$meanwhile['meanwhile']['price']}</span>
+					<span class="original-price">原价 ¥{$meanwhile['meanwhile']['markprice']}</span>
+				</div>
+				{if $meanwhile['buystatus']==1}
+				<label class="line-right" style="background: #ccc;">已购买</label>
+				{else}
+				<label class="line-right" onclick="location.href='{php echo $this->createMobileUrl('meanwhiledetail', array('id' => $meanwhile['meanwhile']['id']));}'">立即购买</label>
+				{/if}
 			</div>
-			{/loop}
-		</div>
-		<div class="sale-line">
-			<span class="now-price">¥{$meanwhile['meanwhile']['price']}</span>
-			<!--<span class="original-price">原价 ¥798</span>-->
-			<label onclick="location.href='{php echo $this->createMobileUrl('confirm', array('meanwhileid' => $meanwhile['meanwhile']['id']));}'">立即购买</label>
 		</div>
 		{/loop}
 	</div>
 	{/if}
-	<!-- 同时购E -->
 
-	<!-- 课程板块遍历 -->
-	<!--
-	{if !empty($list)} {loop $list $rec}
-	<div class="course_wrap mt10">
-		<h2 class="course_hd"><span class="bor-l"></span>{$rec['rec_name']} <a href="{php echo $this->createMobileUrl('recommend', array('recid'=>$rec['recid']));}" class="fr more">更多<i class="fa fa-angle-double-right"></i></a></h2>
-		{if $rec['show_style']==1}
-		<ul class="course_main course_other">
-			{loop $rec['lesson'] $item}
-			<li class="course_item">
-				<a href="{php echo $this->createMobileUrl('lesson', array('op'=>'display', 'id'=>$item['id']));}">
-					<div class="course_pic">
-						{if !empty($item['ico_name'])}
-						<span class="course_ico courseNew" style="background:url('../addons/fy_lessonv2/template/mobile/images/{$item['ico_name']}.png') no-repeat;background-size: 40px 40px;"></span>
-						{/if}
-						<img class="lazy" src="{$_W['attachurl']}{$item['images']}" alt="{$item['bookname']}" />
-						<p class="course_living">{$item['bookname']}</p>
-					</div>
-					<p>
-						<span class="fl red-color">{php echo $item['price']>0?'¥'.$item['price']:'免费';}</span>
-						<span class="fr">
-							{if $item['section_status']==0}
-								<span class="section-status-btn">已完结</span>
-							{else}
-								已更新<i class="blue-color">{$item['count']}</i>节课
-							{/if}
-						</span>
-					</p>
-					<p>
-						{if $setting['stock_config']==1}
-						<span class="fl">仅剩:{$item['stock']}</span> {/if}
-						<span class="fr"><i class="blue-color">{if $item['price']>0}{php echo $item['buynum']+$item['virtual_buynum'];}{else}{php echo $item['buynum']+$item['virtual_buynum']+$item['visit_number'];}{/if}</i>人已学习</span>
-					</p>
-				</a>
-			</li>
-			{/loop}
-		</ul>
-		{elseif $rec['show_style']==2}
-		<ul class="course_main course_live">
-			<li class="course_item" style="width:100%;">
-				<a href="{php echo $this->createMobileUrl('lesson', array('op'=>'display', 'id'=>$rec['lesson'][0]['id']));}">
-					<div class="course_pic">
-						{if !empty($rec['lesson'][0]['ico_name'])}
-						<span class="course_ico courseNew" style="background:url('../addons/fy_lessonv2/template/mobile/images/{$rec['lesson'][0]['ico_name']}.png') no-repeat;background-size: 40px 40px;"></span>
-						{/if}
-						<img class="lazy" src="{$_W['attachurl']}{$rec['lesson'][0]['images']}" alt="{$rec['lesson'][0]['bookname']}" style="height:184px" />
-					</div>
-					<h3>{$rec['lesson'][0]['bookname']}</h3>
-					<p>
-						<span class="fl red-color" style="font-size:13px;"> 
-							{php echo $rec['lesson'][0]['price']>0?'¥'.$rec['lesson'][0]['price']:'免费';} 
-							{if $rec['lesson'][0]['section_status']==0}
-								<span class="section-status-btn">已完结</span>
-							{/if}
-						</span>
-						<span class="fr">已有<i class="blue-color">{if $rec['lesson'][0]['price']>0}{php echo $rec['lesson'][0]['buynum']+$rec['lesson'][0]['virtual_buynum'];}{else}{php echo $rec['lesson'][0]['buynum']+$rec['lesson'][0]['virtual_buynum']+$rec['lesson'][0]['visit_number'];}{/if}</i>人学习</span>
-					</p>
-				</a>
-			</li>
-			{loop $rec['lesson'] $key $item} {if $key>0}
-			<li class="course_item">
-				<a href="{php echo $this->createMobileUrl('lesson', array('op'=>'display', 'id'=>$item['id']));}">
-					<div class="course_pic">
-						{if !empty($item['ico_name'])}
-						<span class="course_ico courseNew" style="background:url('../addons/fy_lessonv2/template/mobile/images/{$item['ico_name']}.png') no-repeat;background-size: 40px 40px;"></span>
-						{/if}
-						<img class="lazy" src="{$_W['attachurl']}{$item['images']}" alt="{$item['bookname']}" />
-						<p class="course_living">{$item['bookname']}</p>
-					</div>
-					<p>
-						<span class="fl red-color">{php echo $item['price']>0?'¥'.$item['price']:'免费';}</span>
-						<span class="fr">
-							{if $item['section_status']==0}
-								<span class="section-status-btn">已完结</span>
-							{else}
-								已更新<i class="blue-color">{$item['count']}</i>节课
-							{/if}
-						</span>
-					</p>
-					<p>
-						{if $setting['stock_config']==1}
-						<span class="fl">仅剩:{$item['stock']}</span> {/if}
-						<span class="fr"><i class="blue-color">{if $item['price']>0}{php echo $item['buynum']+$item['virtual_buynum'];}{else}{php echo $item['buynum']+$item['virtual_buynum']+$item['visit_number'];}{/if}</i>人已学习</span>
-					</p>
-				</a>
-			</li>
-			{/if} {/loop}
-		</ul>
-		{elseif $rec['show_style']==3}
-		<ul class="course_main course_live">
-			{loop $rec['lesson'] $item}
-			<li class="course_item" style="width:100%;">
-				<a href="{php echo $this->createMobileUrl('lesson', array('op'=>'display', 'id'=>$item['id']));}">
-					<div class="course_pic">
-						{if !empty($item['ico_name'])}
-						<span class="course_ico courseNew" style="background:url('../addons/fy_lessonv2/template/mobile/images/{$item['ico_name']}.png') no-repeat;background-size: 40px 40px;"></span>
-						{/if}
-						<img class="lazy" src="{$_W['attachurl']}{$item['images']}" alt="{$item['bookname']}" style="height:184px" />
-						<p class="course_living">{$item['bookname']}</p>
-					</div>
-				</a>
-			</li>
-			{/loop}
-		</ul>
-		{elseif $rec['show_style']==4}
-		<ul class="course-sections">
-			{loop $rec['lesson'] $item}
-			<li>
-				<a href="{php echo $this->createMobileUrl('lesson', array('op'=>'display', 'id'=>$item['id']));}"><i class="fa fa-book index-book-color"></i> {$item['bookname']}</a>
-			</li>
-			{/loop}
-		</ul>
-		{/if}
-	</div>
-	{/loop} {/if}
-	-->
-	<!-- /课程板块遍历 -->
-	
 	{if !empty($config['index_slogan'])}
 	<div class="slogan_wrap">
 		<div class="slogan_bd" style="background-image:url({$_W['attachurl']}{$config['index_slogan']});"></div>
 	</div>
 	{/if}
+
 </div>
 
 <!-- 绑定手机号码 -->
