--- a/addons/fy_lessonv2/template/mobile/search.html
+++ b/addons/fy_lessonv2/template/mobile/search.html
@@ -10,106 +10,76 @@
 {template '_headerv2'}
 
 {if $op=='display'}
-<link href="{MODULE_URL}template/mobile/style/cssv2/search.css?v={$versions}" rel="stylesheet" />
+<link href="{MODULE_URL}template/mobile/style/cssv2/all-category.css?v={$versions}" rel="stylesheet" />
+<link href="{MODULE_URL}template/mobile/style/cssv2/lession-list.css?v={$versions}" rel="stylesheet" />
 
-<!-- 顶部搜索框 -->
-<header class="m-header z-img-ready border-top">
-	<!--
-	<div class="header_search">
-		<div class="u-search">
-			<i class="fa fa-search"></i>
-			<input type="text" id="searchInput" class="search_input z-abled" value="{$_GPC['keyword']}" autocorrect="off" placeholder="输入课程名称进行查找">
-		</div>
-	</div>
-	-->
+<div class="container">
 	<div class="header">
 		<div class="search-box">
 			<div class="search-placeholder">
-				<input type="search" id="searchInput" value="{$_GPC['keyword']}" autocorrect="off" placeholder="输入课程名称进行查找" />
+				<input type="search" id="searchInput" autocorrect="off" value="{$_GPC['keyword']}"  placeholder="搜索课程" />
 			</div>
 		</div>
 	</div>
-</header>
-
-<!-- /顶部搜索框 -->
-
-<!-- 筛选条件 -->
-<div id="nav" class="nav">
-	<div id="sort-list" class="dropdown">
-		<div class="dropdown_description">
-			{$sortname} <i class="fa fa-angle-down"></i>
-			<div id="contact_ico" class="contact_ico"><i class="fa fa-angle-up"></i></div>
-		</div>
+	<!-- 筛选条件 -->
+	<div class="tab-nav">
+		<label id="zonghe">综合排序<img src="{MODULE_URL}template/mobile/images/down-arrow.png" alt="">
+			<span></span></label>
+		<label onclick="location.href='{php echo $this->createMobileUrl('search', array('op'=>'allcategory'));}">全部分类<img src="{MODULE_URL}template/mobile/images/down-arrow.png" alt=""></label>
 	</div>
-	<div class="dropdown" onclick="location.href='{php echo $this->createMobileUrl('search', array('op'=>'allcategory'));}'">
-		<div class="dropdown_description">{$catname} <i class="fa fa-angle-down" id="nav_ico"></i></div>
+	<div class="select-list" style="display: none">
+		<div class="select-one {if empty($sort)}select-bg{/if}" onclick="goSearch('')"><img class="icon-img" src="{MODULE_URL}template/mobile/images/total.png" alt=""><span>综合排序{if empty($sort)}<img class="star-img" src="{MODULE_URL}template/mobile/images/star-white.png" alt="">{/if}</span></div>
+		<div class="select-one {if $sort=='free'}select-bg{/if}" onclick="goSearch('free')"><img class="icon-img" src="{MODULE_URL}template/mobile/images/free.png" alt=""><span>免费课程{if $sort=='free'}<img class="star-img" src="{MODULE_URL}template/mobile/images/star-white.png" alt="">{/if}</span></div>
+		<div class="select-one {if $sort=='price'}select-bg{/if}" onclick="goSearch('price')"><img class="icon-img" src="{MODULE_URL}template/mobile/images/price.png" alt=""><span>价格优先{if $sort=='price'}<img class="star-img" src="{MODULE_URL}template/mobile/images/star-white.png" alt="">{/if}</span></div>
+		<div class="select-one {if $sort=='hot'}select-bg{/if}" onclick="goSearch('hot')"><img class="icon-img" src="{MODULE_URL}template/mobile/images/popularity.png" alt=""> <span>人气优先{if $sort=='hot'}<img class="star-img" src="{MODULE_URL}template/mobile/images/star-white.png" alt="">{/if}</span></div>
+		<div class="select-one {if $sort=='score'}select-bg{/if}" onclick="goSearch('score')"><img class="icon-img" src="{MODULE_URL}template/mobile/images/praise.png" alt=""> <span>好评优先{if $sort=='score'}<img class="star-img" src="{MODULE_URL}template/mobile/images/star-white.png" alt="">{/if}</span></div>
 	</div>
-</div>
-<div class="dropdown_wrapper" id="dropdown_wrapper">
-	<ul class="dropdown_menu">
-		<li class="dropdown_item {if empty($sort)}z-open{/if}" onclick="goSearch('')">综合排序</li>
-		<li class="dropdown_item {if $sort=='free'}z-open{/if}" onclick="goSearch('free')">免费课程</li>
-		<li class="dropdown_item {if $sort=='price'}z-open{/if}" onclick="goSearch('price')">价格优先</li>
-		<li class="dropdown_item {if $sort=='hot'}z-open{/if}" onclick="goSearch('hot')">人气优先</li>
-		<li class="dropdown_item {if $sort=='score'}z-open{/if}" onclick="goSearch('score')">好评优先</li>
-	</ul>
-</div>
-<input type="hidden" id="sort" value="0"/>
-<!-- /筛选条件 -->
+	<input type="hidden" id="sort" value="0"/>
+	<!-- /筛选条件 -->
 
-<!-- 课程列表 -->
-<div class="section">
-	<div style="margin:90px auto 10px;">
-		{if !empty($cat_id) || !empty($keyword)}
-		<div class="search-result-toast">
-			共找到<span class="search-result-word">{$total}</span>门课程
+	<!-- 课程列表 -->
+	<div class="classification-list">
+		<div id="list-box"></div>
+		<div class="no-data">
+			<img src="{MODULE_URL}template/mobile/images/no-data.png" alt="">
+			<span>没有找到任何课程</span>
 		</div>
-		{/if}
-		<ul id="js-course-list" class="course-list list-view" style="min-height:1px;">
-		</ul>
 		<div id="loading_div" class="loading_div">
 			<a href="javascript:void(0);" id="btn_Page"><i class="fa fa-arrow-circle-down"></i> 加载更多</a>
 		</div>
 	</div>
+	<!-- /课程列表 -->
+
 	<footer>
-	    <a href="{php echo $this->createMobileUrl('index', array('t'=>1));}">{$setting['copyright']}</a>
+		<a href="{php echo $this->createMobileUrl('index', array('t'=>1));}">{$setting['copyright']}</a>
 	</footer>
 </div>
-<!-- /课程列表 -->
 
 <!-- 遮罩层 -->
-<div id="sort_background" class="dropdown__background"></div>
+<div id="sort_background" class="mask-box"></div>
 <!-- /遮罩层 -->
 <div id="loading" style="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);z-index:999999999;"><div class="spinner"><div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div></div></div>
 
 <script type="text/javascript">
-var nav = document.getElementById("nav");
-var dropdown_wrapper = document.getElementById("dropdown_wrapper");
-var contact_ico = document.getElementById("contact_ico");
-var sort_background = document.getElementById("sort_background");
-
-$("#sort-list").on("click", function(){
+$("#zonghe").on("click", function(){
 	var sort = $("#sort").val();
 	if(sort==0){
 		$("#sort").val(1);
-		dropdown_wrapper.style.display = "block";
-		contact_ico.style.display = "block";
-		nav.style.borderBottomColor = "#23b8ff";
-		sort_background.style.display = "block";
+		$('#zonghe').addClass('select-span').find('img').attr('src', '{MODULE_URL}template/mobile/images/up-arrow.png');
+		$('select-list').show();
+		$('#sort_background').show();
 	}else{
 		$("#sort").val(0);
-		dropdown_wrapper.style.display = "none";
-		contact_ico.style.display = "none";
-		nav.style.borderBottomColor = "#e2e2e2";
-		sort_background.style.display = "none";
+		$('#zonghe').removeClass('select-span').find('img').attr('src', '{MODULE_URL}template/mobile/images/down-arrow.png');
+		$('select-list').hide();
+		$('#sort_background').hide();
 	}
 });
 $("#sort_background").on("click", function(){
 	$("#sort").val(0);
-	dropdown_wrapper.style.display = "none";
-	contact_ico.style.display = "none";
-	nav.style.borderBottomColor = "#e2e2e2";
-	sort_background.style.display = "none";
+	$('#zonghe').removeClass('select-span').find('img').attr('src', '{MODULE_URL}template/mobile/images/down-arrow.png');
+	$('select-list').hide();
+	$('#sort_background').hide();
 });
 
 function goSearch(sort){
@@ -152,6 +122,7 @@ $("#search_btn").on("click", function(){
 var ajaxUrl   = "{php echo $_W['siteUrl'];}";
 var attachUrl = "{php echo $_W['attachurl'];}";
 var lessonUrl = "{php echo $this->createMobileUrl('lesson');}";
+var modelUrl = "{MODULE_URL}";
 $(function () {
 	var nowPage = 1; //设置当前页数，全局变量
     function getData(page) {
@@ -160,8 +131,11 @@ $(function () {
             if (data.length > 0) {
             	loading.style.display = 'none';
                 var jsonObj = JSON.parse(data);
-                insertDiv(jsonObj);
-				
+                if(jsonObj.length == 0 && page == 1){
+                    $('.my_empty').show();
+				}else{
+                    insertDiv(jsonObj);
+				}
             }
         });  
     } 
@@ -170,36 +144,40 @@ $(function () {
 
     //生成数据html,append到div中  
     function insertDiv(result) {  
-        var mainDiv =$("#js-course-list");
+        var mainDiv =$("#list-box");
         var chtml = '';  
         for (var j = 0; j < result.length; j++) {
-            chtml += '<li class="lesson_list">';
-            chtml += '	<a href="' + lessonUrl + '&id=' + result[j].id + '" class="package">';
-            chtml += '		<div class="package__cover-wrap">';
-            chtml += '			<div class="package__cover" style="background-image: url(' + attachUrl + result[j].images + ');">';
-            chtml += '				<span class="package__cover-tips package__cover-tips--status">' + result[j].buyTotal + '人已学习</span>';
-            chtml += '			</div>';
-            chtml += '		</div>';
-            chtml += '		<div class="package__content">';
-            chtml += '			<h3 class="package__name">' + result[j].bookname + '</h3>';
-            chtml += '			<div class="package__info">';
-            chtml += '				<span class="u-price">' + result[j].price + '</span>';
-            chtml += '			</div>';
-            chtml += '			<div class="package__info">';
-			if(result[j].section_status==0){
-				chtml += '<span class="section-status-btn">已完结</span>';
-			}else{
-				chtml += '				<span>共<i class="blue-color">' + result[j].soncount + '</i>节课程</span>';
+            var num = parseInt(result[j].buynum) + parseInt(result[j].virtual_buynum);
+            if(result[j].price == 0){
+                num += parseInt(result[j].visit_number);
             }
-			if(result[j].score>0){
-				chtml += '				<div class="package__course-num"><i class="blue-color">' + result[j].score_rate + '%</i>好评</div>';
-			}else{
-          		chtml += '				<div class="package__course-num"><i class="blue-color">' + result[j].score_rate + '</div>';
+
+            chtml += '<a href="' + lessonUrl + '&id=' + result[j].id + '">';
+            chtml += '	<div class="box-one">';
+            chtml += '		<img class="box-left" src="' + attachUrl + result[j].images + '">';
+            chtml += '		<div class="box-right">';
+            chtml += '			<div class="top-right_box">';
+            chtml += '				<span class="top-text">' + result[j].bookname + '</span>';
+            chtml += '				<span class="middle-span">';
+            if(result[j].difficulty != ''){
+                chtml += '				<div class="middle-label">' + result[j].difficulty + '</div>';
 			}
+            if(result[j].score>0){
+                chtml += '				<div class="middle-label blue">' + result[j].score_rate + '%好评</div>';
+			}
+			chtml += '				</span>';
+            chtml += '			</div>';
+            chtml += '			<div class="bottom-span">';
+            if(result[j].price > 0){
+                chtml += '¥' + result[j].price;
+			}else{
+                chtml += '免费';
+			}
+			chtml += '				<span class="already-study"><img src="' + modelUrl + 'template/mobile/images/person-study.png">' + num + '人已学习</span>';
             chtml += '			</div>';
             chtml += '		</div>';
-            chtml += '	</a>';
-            chtml += '</li>';
+            chtml += '	</div>';
+            chtml += '</a>';
         }
 		mainDiv.append(chtml);
 		if(result.length==0){
@@ -209,13 +187,13 @@ $(function () {
   
     //==============核心代码=============
 	var msg_list_loading = false;
-	$('.section').on('scroll', function(){
+	$('.classification-list').on('scroll', function(){
 		if (!msg_list_loading){
 			load_more_msg();
 		}
 	})
 	function load_more_msg(){     
-		var msg_list = $('.section');
+		var msg_list = $('.classification-list');
 		if (msg_list.height() + msg_list[0].scrollTop >= msg_list[0].scrollHeight) {
 			msg_list_loading = true;
 			$("#btn_Page").hide();
@@ -236,7 +214,6 @@ $(function () {
 
 {elseif $op=='allcategory'}
 <link href="{MODULE_URL}template/mobile/style/cssv2/all-category.css?v={$versions}" rel="stylesheet" />
-
 <div class="header">
 	<div class="search-box">
 		<div class="search-placeholder">
